<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_send"
        android:title="@string/send"
        android:icon="@drawable/ic_send_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="always" />
</menu>